--- a/app/src/main/res/layout/activity_user_signup.xml
+++ b/app/src/main/res/layout/activity_user_signup.xml
@@ -7,8 +7,21 @@
     android:background="@drawable/login_bg"
     tools:context=".user_signup">
 
+
+    <ImageView
+        android:id="@+id/backbuttsign"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/back_arrow"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.082"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.058" />
+
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/sigsign"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign Up"
@@ -23,6 +36,7 @@
         app:layout_constraintVertical_bias="0.378" />
 
     <EditText
+        android:id="@+id/editText"
         android:layout_width="253dp"
         android:layout_height="48dp"
         android:ems="10"
@@ -37,6 +51,7 @@
         app:layout_constraintVertical_bias="0.608" />
 
     <EditText
+        android:id="@+id/editText3"
         android:layout_width="256dp"
         android:layout_height="48dp"
         android:ems="10"
@@ -51,6 +66,7 @@
         app:layout_constraintVertical_bias="0.692" />
 
     <EditText
+        android:id="@+id/editText2"
         android:layout_width="256dp"
         android:layout_height="48dp"
         android:ems="10"
@@ -63,4 +79,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.519" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="163dp"
+        android:layout_height="50dp"
+        android:backgroundTint="#890E0A"
+        android:text="Get Cooking!"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.459"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.811" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
